--- a/package.json
+++ b/package.json
@@ -29,8 +29,8 @@
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^14.1.0-next",
-    "@angular/cli": "~14.0.0",
+    "@angular-devkit/build-angular": "^14.1.2",
+    "@angular/cli": "~14.1.2",
     "@angular/compiler-cli": "^14.1.0-next",
     "@types/jasmine": "~4.0.0",
     "@types/node": "^16.11.35",
