--- a/package.json
+++ b/package.json
@@ -13,14 +13,14 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^14.1.0-next",
-    "@angular/common": "^14.1.0-next",
-    "@angular/compiler": "^14.1.0-next",
-    "@angular/core": "^14.1.0-next",
-    "@angular/forms": "^14.1.0-next",
-    "@angular/platform-browser": "^14.1.0-next",
-    "@angular/platform-browser-dynamic": "^14.1.0-next",
-    "@angular/router": "^14.1.0-next",
+    "@angular/animations": "^14.1.2",
+    "@angular/common": "^14.1.2",
+    "@angular/compiler": "^14.1.2",
+    "@angular/core": "^14.1.2",
+    "@angular/forms": "^14.1.2",
+    "@angular/platform-browser": "^14.1.2",
+    "@angular/platform-browser-dynamic": "^14.1.2",
+    "@angular/router": "^14.1.2",
     "angular-in-memory-web-api": "~0.14.0",
     "bootstrap": "^5.2.0",
     "font-awesome": "^4.7.0",
@@ -31,7 +31,7 @@
   "devDependencies": {
     "@angular-devkit/build-angular": "^14.1.2",
     "@angular/cli": "~14.1.2",
-    "@angular/compiler-cli": "^14.1.0-next",
+    "@angular/compiler-cli": "^14.1.2",
     "@types/jasmine": "~4.0.0",
     "@types/node": "^16.11.35",
     "copyfiles": "^2.4.1",
